update memory tuning setup for Java VM and Zeppelin and Spark Driver